# BCE_APP

./: .gitignore  README_CN.md  test_om_run.py
include/: model_process.h  sample_process.h  utils.h
scripts/: run_embedding.sh  run_rerank.sh
src/: CMakeLists.txt  main.cpp  model_process.cpp  sample_process.cpp  static_main.cpp  test_tokenizer.cpp  tokenizer.cpp  utils.cpp
